# advent-of-code-2021

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  fixtures.py  pyproject.toml  requirements.txt  write_requirements.sh
challenges/: day01a.py  day01b.py  day02a.py  day02b.py  day03a.py  day03b.py  day04a.py  day04b.py  day05a.py  day05b.py  day06a.py  day06b.py  day07a.py  day07b.py  day08a.py  day08b.py  day09a.py  day09b.py  day10a.py  day10b.py  day11a.py  day11b.py  day12a.py  day12b.py  day13a.py  day13b.py  day14a.py  day14b.py  day15a.py  day15b.py
tests/: challenges_test.py  day01_test.py  day01a_test.py  day01b_test.py  day02_test.py  day02a_test.py  day02b_test.py  day03_test.py  day04_test.py  day05_test.py  day06_test.py  day07_test.py  day08_test.py  day09_test.py  day10_test.py  day11_test.py  day12_test.py  day13_test.py  day14_test.py  day15_test.py
